force-app/main/default/objects/Orphan_Visit__c/Orphan_Visit__c.object-meta.xml
<CustomObject>
    <description>Orphan Visit For Field Office</description>
    <label>Orphan Visit</label>
    <nameField>
        <displayFormat>VISIT-{00000}</displayFormat>
        <label>Orphan Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orphan Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>