force-app/main/default/objects/Orphan_Visit__c/fields/Activity_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Activity_Photo_URL__c</fullName>
    <label>Activity Photo URL</label>
    <type>Url</type>
</CustomField>