force-app/main/default/objects/Orphan_Visit__c/fields/DMS_SponsoreeWorkerVisit_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_SponsoreeWorkerVisit_Id__c</fullName>
    <externalId>true</externalId>
    <label>DMS SponsoreeWorkerVisit Id</label>
    <length>45</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>