force-app/main/default/objects/Orphan_Visit__c/fields/Due_in_next_6_months__c.field-meta.xml
<CustomField>
    <fullName>Due_in_next_6_months__c</fullName>
    <formula>IF( ISNULL(Last_Visit_Completed_Date__c),true,IF(TODAY()&gt; Last_Visit_Completed_Date__c,true,false))</formula>
    <label>Due in next 6 months</label>
    <type>Checkbox</type>
</CustomField>