force-app/main/default/objects/Orphan_Visit__c/fields/Family_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Family_Photo_URL__c</fullName>
    <label>Family Photo URL</label>
    <type>Url</type>
</CustomField>