force-app/main/default/objects/Orphan_Visit__c/fields/Last_Visit_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Completed_Date__c</fullName>
    <formula>IF(MONTH(DATEVALUE(Orphan__r.Orphan_Visit__r.Visit_Completed_Date_time__c) )&gt;6, 
DATE( YEAR(DATEVALUE(Orphan__r.Orphan_Visit__r.Visit_Completed_Date_time__c) )+1 , 
MOD (MONTH(DATEVALUE(Orphan__r.Orphan_Visit__r.Visit_Completed_Date_time__c) )+6,12) , DAY(DATEVALUE(Orphan__r.Orphan_Visit__r.Visit_Completed_Date_time__c) ) ) , 
DATE( YEAR(DATEVALUE(Orphan__r.Orphan_Visit__r.Visit_Completed_Date_time__c) ) , MONTH(DATEVALUE(Orphan__r.Orphan_Visit__r.Visit_Completed_Date_time__c) )+6 , DAY(DATEVALUE(Orphan__r.Orphan_Visit__r.Visit_Completed_Date_time__c) ) )
)</formula>
    <label>Last Visit Completed Date</label>
    <type>Date</type>
</CustomField>