force-app/main/default/objects/Orphan_Visit__c/fields/Location_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Visit__c</fullName>
    <label>Location of Visit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
                <default>true</default>
                <label>Home</label>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>