force-app/main/default/objects/Orphan_Visit__c/fields/Orphan__c.field-meta.xml
<CustomField>
    <fullName>Orphan__c</fullName>
    <label>Orphan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Orphan</value>
        </filterItems>
        <infoMessage>Please select an Orphan</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orphan Visits</relationshipLabel>
    <relationshipName>Orphan_Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>