force-app/main/default/objects/Orphan_Visit__c/fields/Orphan_Visit_Form__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Visit_Form__c</fullName>
    <formula>IF( ISPICKVAL( Status__c , &quot;Completed&quot;),&quot;Orphan Visit form already completed&quot;, HYPERLINK(&quot;/flow/Orphan_Visit_Form_on_Visit?recordId=&quot;+ CASESAFEID(Id) , &quot;Orphan Visit&quot;, &quot;_self&quot;))</formula>
    <label>Orphan Visit Form</label>
    <type>Text</type>
</CustomField>