force-app/main/default/objects/Orphan_Visit__c/fields/Orphan_Visit_Form_Pic_Upload__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Visit_Form_Pic_Upload__c</fullName>
    <formula>IF( ISPICKVAL( Status__c , &quot;Completed&quot;),&quot;Orphan Visit form already completed&quot;, HYPERLINK(&quot;/flow/Orphan_Photo_Upload?recordId=&quot;&amp;CASESAFEID(Id), &quot;Orphan Visit&quot;, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orphan Visit Form Pic Upload</label>
    <type>Text</type>
</CustomField>