force-app/main/default/objects/Orphan_Visit__c/fields/Other_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Other_Photo_URL__c</fullName>
    <label>Other Photo URL</label>
    <type>Url</type>
</CustomField>