force-app/main/default/objects/Orphan_Visit__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <label>Purpose of Visit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Deliver Stipend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>