force-app/main/default/objects/Orphan_Visit__c/fields/Visit_Completed_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Completed_Date_time__c</fullName>
    <description>Populate when visit is completed, For End user Readonly</description>
    <label>Visit Completed Date &amp; time</label>
    <type>DateTime</type>
</CustomField>