force-app/main/default/objects/Orphan_Visit__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Visit Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>