force-app/main/default/objects/Orphan_Visit__c/fields/Welfare_of_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Welfare_of_Guardian__c</fullName>
    <label>Welfare of Guardian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>